# Laplacian-Filter

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
res/: filter.txt  kernel.cl
